<resources>
    <string name="app_name" translatable="false">Cavanz</string>
    <string name="text_navbar_films">Filmaanbod</string>
    <string name="text_navbar_tickets">Recent bekeken</string>
    <string name="text_navbar_info">Informatie</string>
    <string name="text_navbar_search">Zoeken</string>
    <string name="navbar_search">Zoeken</string>
    <string name="maps_key">AIzaSyCmRrTv3zdQZPZ-DiodRENNdJ1c2SPzrhc</string>


    <!--  Strings needed for info  -->
    <string name="info_name" translatable="false">Cavanz Cinema</string>
    <string name="info_street_house_number" translatable="false">Chasséveld 15</string>
    <string name="info_postal_code_city" translatable="false">4811 DH, Breda</string>
    <string name="info_phone_number" translatable="false">088–51 51 000</string>
    <string name="info_email" translatable="false">klantenservice@cavans.nl</string>
    <string name="info_opening">Openingstijden</string>
    <string name="info_times_opening">We zijn open van 9 uur \'s ochtends tot 10 uur \'s avonds.</string>
    <string name="info_times_opening">
       \t\t Maandag   \t\t\t  11:00 – 23:00 \n
       \t\t Dinsdag   \t\t\t\t  11:00 – 23:00 \n
       \t\t Woensdag  \t\t  11:00 – 23:00 \n
       \t\t  Donderdag \t\t  11:00 – 23:00 \n
       \t\t Vrijdag   \t\t\t\t\t  11:00 – 23:00 \n
       \t\t Zaterdag  \t\t\t  12:00 – 23:00 \n
       \t\t Zondag    \t\t\t\t  12:00 – 23:00</string>
    <string name="info_title_route">Bereikbaarheid</string>
    <string name="description_cinema_picture">The cinema</string>
    <string name="description_maps_button">go to Google Maps</string>
    <string name="parking_information">Parkeerplaatsen zijn voor de deur te vinden. Als u op de rode icoon op de kaart drukt krijgt u een routebeschrijving te zien vanaf uw huidige locatie.</string>

    <!--Strings needed for rates-->
    <string name="title_rates">Tarieven</string>

    <!-- Placeholder string -->
    <string name="description_placeholder">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
        Cum sociis natoque penatibus et magnis disparturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
        pretium quis, sem. Nulla consequat massa quis enim.</string>
    <string name="title_activity_payment">PaymentActivity</string>

    <string name="movie_title">Title</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_release_date">Release datum</string>
    <string name="movie_duration">Tijdsduur :  </string>
    <string name="movie_actors">Acteurs</string>
    <string name="movie_language">Taal : </string>

    <!-- Strings for Payment -->
    <string name="text_payment_order">Bestellen</string>
    <string name="text_payment_title">Titel</string>
    <string name="text_payment_date">Datum:</string>
    <string name="text_payment_starttime">Begintijd:</string>
    <string name="text_payment_endtime">Eindtijd:</string>
    <string name="text_payment_location">Locatie:</string>
    <string name="text_payment_poster">Poster</string>
    <string name="text_payment_hall">Zaal</string>
    <string name="text_payment_overview">Controleren en Betalen</string>
    <string name="text_payment_completed_title">Bedankt voor uw bestelling!</string>
    <string name="text_payment_completed_explanation">De tickets zijn naar het opgegeven e-mail adres verstuurd. Print deze voor uw bezoek aan de bioscoop uit of download uw e-ticket om deze op te slaan op uw apparaat.</string>
    <string name="text_payment_completed_download">Download E-Ticket</string>
    <string name="text_payment_failed_title">Betaling is geannuleerd</string>
    <string name="text_payment_failed_explanation">Er is een fout opgetreden tijdens de betaling of u heeft de betaling geannuleerd. U kunt proberen opnieuw te betalen door terug te gaan naar de detailpagina van de gekozen film.</string>
    <string name="text_payment_completed_ticketsaved">E-Ticket is opgeslagen in downloads folder</string>
    <string name="text_payment_error_whathappened">Er is helaas iets fout gegaan, probeer het opnieuw.</string>
    <string name="text_permissions_internal_storage">Om E-Tickets op te slaan heeft deze app toegang nodig tot het bestandssysteem van uw telefoon.</string>
    <string name="text_permissions_allow">Toestaan</string>
    <string name="payment_text_hall">Zaal</string>
    <string name="payment_text_overview">Controleren en Betalen</string>
    <string name="OrderNowButton">Bestel nu!</string>

</resources>
