<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nl.marcovp.avans.cavanz.Controller.PaymentCompletionActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="10dp">

        <ImageView
            android:id="@+id/payment_ticket_imageview_poster"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:contentDescription="@string/text_payment_poster"
            android:cropToPadding="false"
            android:padding="20dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/payment_ticket_textview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_payment_title" />

            <TextView
                android:id="@+id/payment_ticket_textview_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_payment_date" />

            <TextView
                android:id="@+id/payment_ticket_textview_starttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_payment_starttime" />

            <TextView
                android:id="@+id/payment_ticket_textview_endtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_payment_endtime"
                tools:text="Eindtijd:" />

            <TextView
                android:id="@+id/payment_ticket_textview_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_payment_location" />

        </LinearLayout>

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <ListView
            android:id="@+id/payment_ticket_listview_tickets"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/payment_ticket_textview_tickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/payment_ticket_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Voornaam"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/payment_ticket_edit_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Achternaam"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/payment_ticket_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/payment_ticket_button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Annuleren" />

        <Button
            android:id="@+id/payment_ticket_button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Betalen" />
    </LinearLayout>

</LinearLayout>
