<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Movie_Detail_OrderNow"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_light"
        android:text="@string/OrderNowButton"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        tools:text="@string/OrderNowButton" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation">

    </android.support.design.widget.BottomNavigationView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_movie_detail_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground"/>

            <TextView
                android:id="@+id/tv_movie_detail_title"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/movie_title"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_movie_detail_image" />

            <!--<TextView-->
                <!--android:id="@+id/tv_movie_detail_genre"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="20dp"-->
                <!--android:layout_marginEnd="8dp"-->
                <!--android:layout_marginStart="8dp"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:text="@string/movie_genre"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_title" />-->

            <TextView
                android:id="@+id/tv_movie_detail_releasedate"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/movie_release_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_genre" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    tools:layout_editor_absoluteX="48dp"
                    tools:layout_editor_absoluteY="424dp"
                    style="?android:attr/ratingBarStyleSmall"
                    android:rating="3.5"
                    />


                <TextView
                    android:id="@+id/tv_movie_detail_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_duration"
                    android:textAlignment="viewEnd"
                    android:layout_weight="0.6"/>

                <TextView
                    android:id="@+id/tv_movie_detail_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>


            </LinearLayout>


            <TextView
                android:id="@+id/tv_movie_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/description_placeholder"
                android:textAlignment="viewStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_movie_detail_language"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/movie_language"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_description" />

                <TextView
                    android:id="@+id/tv_movie_detail_language_select"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_language" />


            </LinearLayout>

        </LinearLayout>




    </ScrollView>



</android.support.constraint.ConstraintLayout>